# fastapi-model-serving-api

./: Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: pipeline_draft.ipynb
src/: marketing.py  predict.py  schemas.py  train.py
